--- a/src/styles/landingPage/sections/Description.scss
+++ b/src/styles/landingPage/sections/Description.scss
@@ -3,6 +3,13 @@
     font-size: calc(12px + 1.3vmin);
   }
 
+  max-width: 60%;
+  z-index: 1;
+
+  @media only screen and (max-width: 1400px) {
+    max-width: 100%;
+  }
+
   @media only screen and (max-width: 768px) {
     .descriptionBr {
       display: none;
